examples/test/testpolicy13527.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13527
  namespace: namespace82
spec:
  podSelector:
    matchLabels:
      key44: value9
      key43: value29
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key27: value29
          key34: value3
      podSelector:
        matchLabels:
          key27: value20
          key2: value34
